# binary_program_solver

./: .clangd  .gitignore  Project.toml  README.md  bench.jl  compact.json  compactify.jl  devtool  generate_n_queens.jl  launch.sh  launch_all.sh  parse_mps.jl  pixi.toml  test.jl
devctr/: Dockerfile
src/: CMakeLists.txt  binary_program.hh  bp_from_mps.cc  bp_from_mps.hh  build.sh  cpu_solver.cc  cpu_solver.hh  cpu_solver_test.cc  gpu_solver.cu  gpu_solver.cuh  gpu_solver.h  gpu_solver.hh  gpu_solver_formatter.hh  gpu_solver_test.cc  load_mps.cc  load_mps.hh  load_mps_test.cc  matmul_lab5.cu  run.sh  sample.mps  solve.jl  solver.cu  vector_add.cu
src/converted/: p0201.cu  p2m2p1m1p0n100.cu  pb-market-split8-70-4.cu  queens_12.cu  queens_16.cu  queens_20.cu  queens_4.cu  queens_8.cu  sample.cu  stein15inf.cu  stein45inf.cu
src/solved/: 2club200v15p5scn_glpk.json  2club200v15p5scn_glpk_nerfed.json  2club200v15p5scn_gurobi.json  2club200v15p5scn_gurobi_nerfed.json  glass-sc_glpk.json  glass-sc_glpk_nerfed.json  glass-sc_gurobi.json  glass-sc_gurobi_nerfed.json  p0201_glpk.json  p0201_glpk_nerfed.json  p0201_gurobi.json  p0201_gurobi_nerfed.json  p2m2p1m1p0n100_glpk.json  p2m2p1m1p0n100_glpk_nerfed.json  p2m2p1m1p0n100_gurobi.json  p2m2p1m1p0n100_gurobi_nerfed.json  pb-market-split8-70-4_glpk.json  pb-market-split8-70-4_glpk_nerfed.json  pb-market-split8-70-4_gurobi.json  pb-market-split8-70-4_gurobi_nerfed.json  sample.json  sample_glpk.json  sample_glpk_nerfed.json  sample_gurobi.json  sample_gurobi_nerfed.json  sample_ours.json  sorrell4_glpk.json  sorrell4_glpk_nerfed.json  sorrell4_gurobi.json  sorrell4_gurobi_nerfed.json  sorrell7_glpk.json  sorrell7_glpk_nerfed.json  sorrell7_gurobi.json  sorrell7_gurobi_nerfed.json  stein15inf_glpk.json  stein15inf_glpk_nerfed.json  stein15inf_gurobi.json  stein15inf_gurobi_nerfed.json  stein45inf_glpk.json  stein45inf_glpk_nerfed.json  (+10 more)
src/test_problems/: queens_12.mps  queens_16.mps  queens_20.mps  queens_4.mps  queens_8.mps
